@@ -1,3 +1,5 @@
+2006/2/9 -- released version 20060209_trunk
+
 2006/2/8 -- released version 20060208_trunk
 
 2006/2/7 -- released version 20060207_trunk
